--- a/thesis/package.json
+++ b/thesis/package.json
@@ -14,6 +14,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hexagon": "^1.1.3",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.4",
     "tailwindcss": "^4.1.14"
   },
